-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0 Beta1
-
None
-
-
b8c536178 (dev), 3a96b26e2 (6.7)
I want to use the same Geometry for a model and a StaticRigidBody, but it does not cook good, when there is TexCoordSemantic.
| For Gerrit Dashboard: QTBUG-120569 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 528663,13 | Fix TriangleMeshShape geometry cooking | dev | qt/qtquick3dphysics | Status: MERGED | +2 | 0 |
| 533073,2 | Fix TriangleMeshShape geometry cooking | 6.7 | qt/qtquick3dphysics | Status: MERGED | +2 | 0 |