Fix TriangleMeshShape geometry cooking

The triangle mesh description needs to take the indices of the triangle
into account if present, as well as use the correct offsets and strides.
This is in contrast to the convex mesh that only needs to take the
points into account since it just creates a convex hull of them.

Fixes: QTBUG-120569
Pick-to: 6.7
Change-Id: Icb31f1eb78f9deb60382922fd8f54be477acd200
Reviewed-by: Andy Nichols <andy.nichols@qt.io>